--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "start": "cross-env NODE_ENV=production node index.js",
-    "test": "cross-env NODE_ENV=test echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test node --test"
   },
   "keywords": [],
   "author": "",
@@ -16,9 +16,11 @@
     "cross-env": "7.0.3",
     "dotenv": "16.4.5",
     "express": "4.19.2",
+    "lodash": "4.17.21",
     "mongoose": "8.4.1"
   },
   "devDependencies": {
+    "jest": "29.7.0",
     "nodemon": "3.1.3"
   }
 }
